gcc/testsuite/gdc.test/runnable/test15079.d
module test15079;

import imports.a15079;

void main() {}
