gcc/testsuite/gdc.test/fail_compilation/imports/a14116.d
module ice14116.a14116;

import ice14116;

void main() {}
